shesmu-server/src/test/resources/bad/bad-action-param-type.shesmu
Input gsi_std;

Olive
  Group files = List path By accession, donor
  Run fastqc With
    memory = "bad",
    input = files;
